gmo-campaign-details.css : CSS fixes for scope-tag to not wrap gmo-campaign-details.js : Added Target Market Area and Platforms refactored async function buildChannelScope(scopeTypeId, scopes, block) to be able to display data for data based for a specified  CSS ID

--- a/blocks/gmo-campaign-details/gmo-campaign-details.css
+++ b/blocks/gmo-campaign-details/gmo-campaign-details.css
@@ -172,27 +172,35 @@ body {
 .use-cases-wrapper {
     margin-bottom: 30px;
 }
+
 .use-cases-wrapper, .channel-scope-wrapper {
     display: flex;
     flex-direction: column;
     margin-top: 30px;
+
     & .tags-wrapper {
         display: flex;
-        flex-direction: row;
+        flex-wrap: wrap; /* Ensure tags wrap properly */
         margin-top: 10px;
     }
+
     & .use-case-tag, .scope-tag {
         font: normal normal normal 14px/17px Adobe Clean;
         color: #505050;
         border: 1px solid #D3D3D3;
         border-radius: 4px;
-        padding: 0 10px 0 10px;
+        padding: 0 10px; /* Ensure no padding at the bottom */
         line-height: 32px;
+        height: 32px; /* Ensure consistent height */
+        display: flex;
+        align-items: center; /* Vertically center the text */
+        margin-bottom: 5px; /* Add margin at the bottom */
         &:not(:last-child) {
             margin-right: 5px;
         }
     }
 }
+
 .main-message-wrapper {
     display: flex;
     flex-direction: column;
